tests/errors/papercut/cell-as-group.expect
---CODE---
1
---STDERR---
Error: tests/errors/papercut/cell-as-group.futil
10 |    save;
   |    ^^^^^ Undefined group or fsm name: save
